--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,23 @@
 et-xmlfile==1.1.0
 openpyxl==3.0.9
 psycopg2==2.9.3
+pywin32==303
+xlwings==0.27.6
+black==22.3.0
+click==8.1.3
+colorama==0.4.4
+et-xmlfile==1.1.0
+mypy-extensions==0.4.3
+numpy==1.22.4
+openpyxl==3.0.9
+pandas==1.4.2
+pathspec==0.9.0
+platformdirs==2.5.2
+psycopg2==2.9.3
+python-dateutil==2.8.2
+pytz==2022.1
+pywin32==303
+six==1.16.0
+tomli==2.0.1
+typing_extensions==4.2.0
+xlwings==0.27.6
